# QtSumary

./: .gitignore  CMakeLists.txt  Readme.md
FileSend/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  main.cpp
MediaPlayer/: CMakeLists.txt  main.cpp  zVideoWidget.cpp  zVideoWidget.h
QVulkan/: CMakeLists.txt  main.cpp  zVulkanWidget.cpp  zVulkanWidget.h
Snake/: CMakeLists.txt  Snake.cpp  Snake.h  main.cpp  zWidget.cpp  zWidget.h
Tetris/: CMakeLists.txt  Tetris.cpp  Tetris.h  main.cpp
lib/: CMakeLists.txt  tools.cpp  tools.h
